--- a/bin/Immersion/assets/immersion/lang/en.json
+++ b/bin/Immersion/assets/immersion/lang/en.json
@@ -82,20 +82,20 @@
   "item-animal-cleanintestines": "Clean Intestines",
   "itemdesc-animal-cleanintestines": "Not Yet Implemented",
   "item-animal-casings": "Casings",
-  "itemdesc-casings": "Animal Innards, not so squiggly anymore.",
-  "item-handbooktitle-animal-casing": "Used for",
-  "item-handbooktext-animal-casing": "Immersion cooking to package foods. Created from intestines using a large bowl and knife.",
+  "itemdesc-animal-casings": "Animal Innards, not so squiggly anymore.",
+  "item-handbooktitle-animal-casings": "Used for",
+  "item-handbooktext-animal-casings": "Immersion cooking to package foods. Created from intestines using a large bowl and knife.",
   
   "item-byproducts-sinew": "Sinew",
   "itemdesc-byproducts-sinew": "Cordage from Powerful Muscles",
   "item-handbooktitle-byproducts-sinew": "Used for",
   "item-handbooktext-byproducts-sinew": "Cordage in immersive crafting, Used to craft Sinew fibers, bowstrings, and bowlimbs.",
   "item-byproducts-sinew-fibers": "Sinew Fibers",
-  "itemdesc-byproducts-sinew-fibers": "Flexible nets of hammered sinew.",
+  "itemdesc-byproducts-sinew-fibers": "Flexible nets of hammered sinew",
   "item-handbooktitle-byproducts-sinew-fibers": "Used for",
   "item-handbooktext-byproducts-sinew-fibers": "Crafting Glue and Sinew Thread (grid).",
   "item-byproducts-sinew-thread": "Sinew Thread",
-  "itemdesc-byproducts-sinew-thread": "Twisted Sinew Fibers.",
+  "itemdesc-byproducts-sinew-thread": "Twisted Sinew Fibers",
   "item-handbooktitle-byproducts-sinew-thread": "Used for",
   "item-handbooktext-byproducts-sinew-thread": "Crafting Immersion Bowstrings and Sinew Rope (grid). (Future uses: sewing thread, fishing line)",
   "item-byproducts-bowstring": "Bowstring",
