game language file to fix typo, corrected rooster textures

--- a/bin/Immersion/assets/game/lang/en.json
+++ b/bin/Immersion/assets/game/lang/en.json
@@ -989,15 +989,15 @@
 	"block-lantern-base-silver": "Silver Lantern Base",
 	"block-lantern-base-gold": "Gold Lantern Base",
 
-	"blockdesc-lantern-base-copper": "Place on a solid block to begin crafting a lantern. Add a wax candle (RMB).",
-	"blockdesc-lantern-base-brass": "Place on a solid block to begin crafting a lantern. Add a wax candle (RMB).",
-	"blockdesc-lantern-base-blackbronze": "Place on a solid block to begin crafting a lantern. Add a wax candle (RMB).",
-	"blockdesc-lantern-base-bismuth": "Place on a solid block to begin crafting a lantern. Add a wax candle (RMB).",
-	"blockdesc-lantern-base-tinbronze": "Place on a solid block to begin crafting a lantern. Add a wax candle (RMB).",
-	"blockdesc-lantern-base-bismuthbronze": "Place on a solid block to begin crafting a lantern. Add a wax candle (RMB).",
-	"blockdesc-lantern-base-molybdochalkos": "Place on a solid block to begin crafting a lantern. Add a wax candle (RMB).",
-	"blockdesc-lantern-base-silver": "Place on a solid block to begin crafting a lantern. Add a wax candle (RMB).",
-	"blockdesc-lantern-base-gold": "Place on a solid block to begin crafting a lantern. Add a wax candle (RMB).",
+	"blockdesc-lantern-base-copper": "Place on a solid block to begin crafting a lantern. Add a wax candle (Sneak+ RMB).",
+	"blockdesc-lantern-base-brass": "Place on a solid block to begin crafting a lantern. Add a wax candle (Sneak + RMB).",
+	"blockdesc-lantern-base-blackbronze": "Place on a solid block to begin crafting a lantern. Add a wax candle (Sneak + RMB).",
+	"blockdesc-lantern-base-bismuth": "Place on a solid block to begin crafting a lantern. Add a wax candle (Sneak + RMB).",
+	"blockdesc-lantern-base-tinbronze": "Place on a solid block to begin crafting a lantern. Add a wax candle (Sneak + RMB).",
+	"blockdesc-lantern-base-bismuthbronze": "Place on a solid block to begin crafting a lantern. Add a wax candle (Sneak + RMB).",
+	"blockdesc-lantern-base-molybdochalkos": "Place on a solid block to begin crafting a lantern. Add a wax candle (Sneak + RMB).",
+	"blockdesc-lantern-base-silver": "Place on a solid block to begin crafting a lantern. Add a wax candle (Sneak + RMB).",
+	"blockdesc-lantern-base-gold": "Place on a solid block to begin crafting a lantern. Add a wax candle (Sneak + RMB).",
 
 	"block-lantern-base-candle-copper": "Copper Lantern Base with candle",
 	"block-lantern-base-candle-brass": "Brass Lantern Base with candle",
