added handbook entrys for barrel creation  added block names for barrels and barrel rings

--- a/bin/Immersion/assets/game/lang/en.json
+++ b/bin/Immersion/assets/game/lang/en.json
@@ -81,16 +81,50 @@
 	"block-bamboostakes-green": "Green Bamboo Stakes",
 	"blockdesc-bamboostakes-*": "Used to craft bamboo panel components for other bamboo blocks, planks, buckets, and barrels.",
 
-	"block-barrel-aged": "Aged Barrel",
+	"block-barrel-aged-copper": "Aged Barrel copper",
+	"block-barrel-aged-tinbronze": "Aged Barrel tinbronze",
+	"block-barrel-aged-bismuthbronze": "Aged Barrel bismuthbronze",
+	"block-barrel-aged-blackbronze": "Aged Barrel blackbronze",
 	"block-barrel-bamboo-brown": "Brown Bamboo Barrel",
 	"block-barrel-bamboo-green": "Green Bamboo Barrel",
-	"block-barrel-birch": "Birch Barrel",
-	"block-barrel-oak": "Oak Barrel",
-	"block-barrel-maple": "Maple Barrel",
-	"block-barrel-pine": "Pine Barrel",
-	"block-barrel-acacia": "Acacia Barrel",
-	"block-barrel-kapok": "Kapok Barrel",
-
+	"block-barrel-birch-copper": "Birch Barrel copper",
+	"block-barrel-birch-tinbronze": "Birch Barrel tinbronze",
+	"block-barrel-birch-bismuthbronze": "Birch Barrel bismuthbronze",
+	"block-barrel-birch-blackbronze": "Birch Barrel blackbronze",
+	"block-barrel-oak-copper": "Oak Barrel copper",
+	"block-barrel-oak-tinbronze": "Oak Barrel tinbronze",
+	"block-barrel-oak-bismuthbronze": "Oak Barrel bismuthbronze",
+	"block-barrel-oak-blackbronze": "Oak Barrel blackbronze",
+	"block-barrel-maple-copper": "Maple Barrel copper",
+	"block-barrel-maple-tinbronze": "Maple Barrel tinbronze",
+	"block-barrel-maple-bismuthbronze": "Maple Barrel bismuthbronze",
+	"block-barrel-maple-blackbronze": "Maple Barrel blackbronze",
+	"block-barrel-pine-copper": "Pine Barrel copper",
+	"block-barrel-pine-tinbronze": "Pine Barrel tinbronze",
+	"block-barrel-pine-bismuthbronze": "Pine Barrel bismuthbronze",
+	"block-barrel-pine-blackbronze": "Pine Barrel blackbronze",
+	"block-barrel-acacia-copper": "Acacia Barrel copper",
+	"block-barrel-acacia-tinbronze": "Acacia Barrel tinbronze",
+	"block-barrel-acacia-bismuthbronze": "Acacia Barrel bismuthbronze",
+	"block-barrel-acacia-blackbronze": "Acacia Barrel blackbronze",
+	"block-barrel-kapok-copper": "Kapok Barrel copper",
+	"block-barrel-kapok-tinbronze": "Kapok Barrel tinbronze",
+	"block-barrel-kapok-bismuthbronze": "Kapok Barrel bismuthbronze",
+	"block-barrel-kapok-blackbronze": "Kapok Barrel blackbronze",
+	"block-barrel-palm-copper": "Palm Barrel copper",
+	"block-barrel-palm-tinbronze": "Palm Barrel tinbronze",
+	"block-barrel-palm-bismuthbronze": "Palm Barrel bismuthbronze",
+	"block-barrel-palm-blackbronze": "Palm Barrel blackbronze",
+	"block-barrelband-tinbronze": "Tinbronze barrel band",
+	"block-barrelband-bismuthbronze": "Bismuthbronze barrel band",
+	"block-barrelband-copper": "Copper barrel band",
+	"block-barrelband-blackbronze": "Blackbronze barrel band",
+	
+	
+	"blockdesc-barrel-*": "Barrel",
+	"block-handbooktitle-barrel-*": "Created by",
+	"block-handbooktext-barrel-*": "Place a plank pannel (sneak+RMB), add 12 boards, (sneak+RMB) add two barrel rings." ,
+	
 	"block-woodbucket-aged": "Aged Bucket",
 	"block-woodbucket-bamboo-green": "Green Bamboo Bucket",
 	"block-woodbucket-bamboo-brown": "Brown Bamboo Bucket",
@@ -3873,6 +3907,6 @@
 	"item-arrow-poison*": "Poisoned Arrow crafted from any arrow and mushroom",
 	"itemdesc-arrow-poison*": "Adds +2 damage. Future recipe should include cooking with a herb to get poison.",
 	
-	"item-plank-palm": "Board (Palm)",
+	"item-plank-palm": "Board (Palm)"
 
 }
